--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Practice</title>
-    <script src="script.js"></script>
   </head>
   <body>
     <h1>Hi HI!</h1>
+    <!-- javascript script -->
+    <script src="script.js"></script>
   </body>
 </html>
